# LoreSmith

./: .env.example  .gitignore  README.md  dev_config.json  pyproject.toml
ainovel_py/: __init__.py
ainovel_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ainovel_py/agents/: __init__.py  build.py  context_manager.py  llm_client.py  metadata_extractor.py  model_registry.py  runner.py
ainovel_py/agents/orchestrator/: dispatcher.py  tags.py  (+1 more)
ainovel_py/assets/: __init__.py  loader.py
ainovel_py/bootstrap/: config.py
ainovel_py/cli/: main.py
ainovel_py/domain/: checkpoint.py  commit.py  review.py  runtime.py  runtime_events.py  story.py  transitions.py  writing.py
ainovel_py/host/: events.py  host.py  resume.py
ainovel_py/internal_api/: app.py  deps.py  dto.py  persistence.py  registry.py  response_dto.py  routes.py  service.py  settings.py  worker.py  workspace_routes.py  workspace_service.py
ainovel_py/store/: checkpoints.py  io.py  progress.py  run_meta.py  runtime.py  signals.py  store.py  story_data.py
ainovel_py/tools/: __init__.py  base.py  check_consistency.py  commit_chapter.py  draft_chapter.py  helpers.py  novel_context.py  parsers.py  plan_chapter.py  read_chapter.py  save_arc_summary.py  save_foundation.py  save_review.py  save_volume_summary.py
frontend-web/: package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
java-platform/: Dockerfile  pom.xml
output/internal_api/: runs.json  runs.json.tasks
output/novel/: relationship_state.json  timeline.json
scripts/: quick_test.py  test_agent_flow.py  test_architect_plan_review.py  test_integration.py  test_io_per_dir_lock.py  test_metadata_extractor.py  test_mock_agent_flow.py  test_model_registry.py  test_parallel_summaries.py  test_prefetch_plan.py  test_registry_dispatcher.py  test_supervisor_routing.py
tests/: conftest.py  integration_smoke.py  langgraph_backend_smoke.py  langgraph_nodes_smoke.py  resume_recovery_smoke.py  test_dispatcher.py  test_editor.py  test_helpers.py  test_hints.py  test_metadata_extractor.py  test_no_infinite_loop.py  test_per_role_llm.py  test_prefetch.py  test_registry.py  test_review_weighted_score.py  test_state.py  test_tags.py
(+114 files in other folders)
